# RMNG

./: .dockerignore  .gitignore  CLAUDE.md  CODEX_PARITY.md  Cargo.toml  Dockerfile  HANDOFF-clone-shm-fix.md  MACOS_PORT.md  README.md  ZEROCOPY_DECODE.md  ZEROCOPY_ENCODE.md  compose.yaml  full-gnome.env  rmng.env  skills-lock.json
agent-wrapper/: README.md  agent-instructions.md  operating-notes.md  package.json  ticket-procedure.md  tsconfig.json
agent-wrapper/src/: assets.d.ts  config.ts  instructions.test.ts  mcp.test.ts  mcp.ts  server.ts
cliproxy-sidecar/: go.mod  main.go
crates/cli/: Cargo.toml  README.md
crates/cli/src/: args.rs  commands.rs  main.rs  output.rs
crates/clone-daemon/: Cargo.toml  README.md
crates/clone-daemon/src/: capture.rs  capture_pw.rs  clipboard.rs  detector.rs  keysym.rs  main.rs  mcp.rs  mutter.rs  transport.rs  windows.rs
crates/control-client/: Cargo.toml  README.md
crates/control-client/src/: lib.rs
crates/control-server/: Cargo.toml  README.md  build.rs
crates/control-server/embedded-bin/: .gitignore
crates/control-server/scripts/: apply-credentials.sh  apply-monitors.sh  bootstrap.sh  claude-import.sh  clone.sh  delete.sh  provision-clone.sh  redeploy.sh
crates/control-server/src/: antigravity.rs  app.rs  boot.rs  buildinfra.rs  cgroup.rs  chat.rs  claude.rs  cliproxy.rs  clone_ops.rs  clone_reconcile.rs  codex.rs  config.rs  docker.rs  embed.rs  files.rs  forward.rs  homes.rs  jobs.rs  linear.rs  main.rs  mcp.rs  mediaplane.rs  monitor.rs  mounts.rs  orchestrate.rs  provision.rs  shm.rs  smb.rs  ssh.rs  state.rs  termplane.rs  token_migrate.rs  tokens.rs  update.rs  web.rs
crates/media/: Cargo.toml  README.md
crates/media/src/: encode.rs  lib.rs  screenshot.rs  sock.rs
crates/viewer/: Cargo.toml  README.md
crates/viewer/examples/: locktest.rs
crates/viewer/src/: auto_lock.rs  forward.rs  headless.rs  main.rs  pointer_lock.rs  pointer_lock_macos.rs  terminal.rs
crates/wire/: Cargo.toml  README.md
crates/wire/src/: config.rs  control.rs  exec.rs  forward.rs  lib.rs  mcp.rs  socket.rs  viewer.rs
docs/: API.md  CLI.md  DEPLOY.md  DEVELOPMENT.md  INFRA.md  MCP.md  PROTOCOL.md  PROXMOX-LXC.md  SCRIPTS.md
docs/superpowers/plans/: 2026-07-03-editable-agent-playbook.md  2026-07-03-smb-clone-homes.md  2026-07-05-shared-docker-build-infra.md  2026-07-24-gstreamer-init-before-children.md
docs/superpowers/specs/: 2026-07-03-control-server-self-update-design.md  2026-07-03-editable-agent-playbook-design.md  2026-07-04-dynamic-layout-presets-design.md  2026-07-07-reset-aware-auto-account-rotation-design.md  2026-07-15-central-inference-proxy-plan.md  2026-07-19-cliproxy-group-proxy-plan.md  2026-07-24-gstreamer-init-before-children-design.md
frontend/: README.md  package.json  react-router.config.ts  tsconfig.json  vite.config.ts
frontend/app/: app.css  entry.server.tsx  root.tsx  routes.ts
frontend/app/components/: AccountGroupSelect.tsx  ChangeAccountModal.test.ts  ChangeAccountModal.tsx  ChatPanel.tsx  ClaudeAccountsPanel.tsx  CloneEditor.tsx  CloneModal.tsx  CommitImageModal.tsx  GroupLoginModal.tsx  HostEditor.tsx  ImagePicker.tsx  ImagesSection.tsx  ImportAccountModal.tsx  MonitorsEditor.tsx  NewTemplateModal.tsx  OperationProgress.tsx  PortForwardModal.tsx  SettingsPanel.stories.tsx  SettingsPanel.tsx  SetupWizard.tsx  Sidebar.stories.tsx  Sidebar.test.ts  Sidebar.tsx  SidebarClone.stories.tsx  SidebarClone.test.ts  SidebarClone.tsx  SidebarHost.stories.tsx  SidebarHost.test.ts  SidebarHost.tsx
frontend/app/lib/: accountOrder.ts  api.ts  format.ts  types.ts  useCloneNotifications.ts  useColorScheme.ts  workspace.ts
frontend/app/lib/wire/: AgentReport.ts  AppConfigRedacted.ts  Chat.ts  ChatMessage.ts  ChatRole.ts  ClaudeConfig.ts  ClaudeSpend.ts  ClaudeUsage.ts  ClaudeUsageWindow.ts  Clone.ts  CloneAccountRedacted.ts  CloneTokenUsage.ts  CodexConfig.ts  CodexResetMark.ts  ContainerStats.ts  ControlState.ts  DockerConfig.ts  EnvPreset.ts  EnvVar.ts  Group.ts  GroupUsage.ts  Host.ts  ImageInfo.ts  LinearKeyRedacted.ts  LinearKeysSet.ts  LinearWorkspace.ts  ListenConfig.ts  LxcStats.ts  MonitorSpec.ts  MonitorState.ts  Operation.ts  OperationKind.ts  OperationStatus.ts  PortForward.ts  PresetRedacted.ts  Provider.ts  SshConfig.ts  TemplateConfig.ts
frontend/app/routes/: _index.tsx
frontend/app/stories/: PortForwardModal.stories.tsx  fixtures.ts
gnome-patch/: README.md  build-shell-deb.sh
gnome-patch/patches/: shell-01-hide-screen-sharing-indicator.patch  shell-03-enable-eval.patch
scripts/: cs-build-ct.sh  cs-deploy-ct.sh  e2e-agent-playbook.sh  provision-build-ct.sh  provision-deploy-ct.sh  run-localstack.sh
template/setup/: 15-gnome-patch.sh  30-user.sh
