[package]
name = "rmng-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "rmng — fleet management CLI for the RMNG control-server (hosts, clones, images, accounts, operations)."

[[bin]]
name = "rmng"
path = "src/main.rs"

[dependencies]
wire.workspace = true
control-client.workspace = true
serde.workspace = true
clap.workspace = true
tokio.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
base64 = "0.22"
# Used by `rmng desktop … --rescale-screen <W>x<H>` to decode the daemon's
# JPEG, resize, and re-encode before writing to disk. Default features
# (PNG + JPEG encoders + decoders) — the daemon always sends JPEG today
# but PNG support is one less thing to revisit if it ever changes.
image = "0.25"
