[package]
name = "control-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Thin reqwest + SSE client for the control-server port-2 API (integration tests)."

[dependencies]
wire.workspace = true
reqwest.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
tokio.workspace = true
