[package]
name = "media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Media plane: dmabuf ingest -> VA-API H.264 (viewer) + PNG (screenshots) + input routing. GPU; builds on the W6800 box."

[dependencies]
wire.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-video = { version = "0.23", features = ["v1_24"] }
gstreamer-allocators = "0.23"
nix = { version = "0.29", features = ["socket", "uio", "fs"] }
libc = "0.2"

[[bin]]
name = "encode-test"
path = "src/bin/encode_test.rs"

[[bin]]
name = "media-server"
path = "src/bin/media_server.rs"
